--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="S1.jpg">
-    <title>Shubham Mishra</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="Style.css" />
-  </head>
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Page Title -->
+  <title>Shubham Mishra – Web Developer Portfolio</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Portfolio of Shubham Mishra – Web Developer skilled in MERN stack, full-stack projects, and cloud services. Explore my resume, projects, and contact info." />
+  <meta name="keywords" content="Shubham Mishra, Web Developer, MERN Stack, Full Stack Developer, Portfolio, HTML, CSS, JavaScript, Node.js, React, MongoDB" />
+  <meta name="author" content="Shubham Mishra" />
+
+  <!-- Open Graph (LinkedIn, Facebook) -->
+  <meta property="og:title" content="Shubham Mishra -Web Developer Portfolio" />
+  <meta property="og:description" content="Portfolio of Shubham Mishra, BCA student and full-stack developer with MERN expertise. Explore projects, resume, and contact details." />
+  <meta property="og:image" content="https://ephemeral-taffy-f8b761.netlify.app/S1.jpg" />
+  <meta property="og:url" content="https://ephemeral-taffy-f8b761.netlify.app/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Shubham Mishra - Web Developer Portfolio" />
+  <meta name="twitter:description" content="Full-stack developer portfolio showcasing projects, skills, and resume." />
+  <meta name="twitter:image" content="https://ephemeral-taffy-f8b761.netlify.app/S1.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://ephemeral-taffy-f8b761.netlify.app/S1.jpg" />
+
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+    crossorigin="anonymous"
+  />
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="Style.css" />
+</head>
 
   <body>
     <div class="body">
