--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Page Title -->
-  <title>Shubham Mishra – Web Developer Portfolio</title>
+  <title>Shubham Mishra -Web Developer Portfolio</title>
 
   <!-- SEO Meta Tags -->
   <meta name="description" content="Portfolio of Shubham Mishra – Web Developer skilled in MERN stack, full-stack projects, and cloud services. Explore my resume, projects, and contact info." />
